samples/_failures_safe/1761161532_2d0fef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b162531c.c: In function ‘main’:
./samples/SAFE/__tmp_b162531c.c:136:12: error: missing terminating " character
  136 |     printf("Matrix Operations Program\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b162531c.c:136:5: error: expected expression at end of input
  136 |     printf("Matrix Operations Program\n
      |     ^~~~~~
./samples/SAFE/__tmp_b162531c.c:136:5: error: expected declaration or statement at end of input
